--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -63,3 +63,23 @@ p {
   margin: 0 auto;
   padding: 160px 0 40px 0;
 }
+// .clear-box {
+//   overflow: hidden;
+// }
+// @media only screen and (max-width: 750px) {
+//   .body{
+//     width: 100vw;
+//     height: 100vh;
+//   }
+//   .box-title {
+//     text-align: center;
+//     font-size: 50px;
+//     font-weight: bold;
+//     margin: 0 auto;
+//     padding: 60px 5px 40px 5px;
+//   }
+//   // .clear-box {
+//   //   width: 100vw;
+//   //   overflow: hidden;
+//   // }
+// }
