--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -11,3 +11,19 @@ $container-max-widths: (
 .row > * {
   padding: 0;
 }
+
+.navbar {
+  --bs-navbar-padding-x: 0;
+  --bs-navbar-padding-y: 0;
+}
+
+.container,
+.container-fluid,
+.container-xxl,
+.container-xl,
+.container-lg,
+.container-md,
+.container-sm {
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
+}
