--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -57,28 +57,20 @@ p {
 
 .box-title {
   text-align: center;
-  font-size: 50px;
+  font-size: 2.5rem;
   font-weight: bold;
   margin: 0 auto;
-  padding: 160px 0 40px 0;
+  padding: 3rem 0 1rem 0;
 }
-// .clear-box {
+// .{
 //   overflow: hidden;
 // }
-// @media only screen and (max-width: 750px) {
-//   .body{
-//     width: 100vw;
-//     height: 100vh;
-//   }
-//   .box-title {
-//     text-align: center;
-//     font-size: 50px;
-//     font-weight: bold;
-//     margin: 0 auto;
-//     padding: 60px 5px 40px 5px;
-//   }
-//   // .clear-box {
-//   //   width: 100vw;
-//   //   overflow: hidden;
-//   // }
-// }
+@media only screen and (max-width: 750px) {
+  .box-title {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 0 auto;
+    padding: 1.5rem 5px 0.8rem 5px;
+  }
+}
