--- a/assets/styles/font.scss
+++ b/assets/styles/font.scss
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: "Barlow-Bold";
-  src: url("../styles/fonts/Barlow-Bold.ttf");
+  font-family: "Barlow-Regular";
+  src: url("../styles/fonts/Barlow-Regular.ttf");
 }
