--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,7 +13,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
-  font-family: 'Barlow-Bold';
+  font-family: 'Barlow-Regular';
 }
 
 body,
