--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,8 +1,10 @@
-@import "../styles/font.scss";
+@import '../styles/font.scss';
 html {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 body {
