--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -71,8 +71,8 @@ p {
 @media only screen and (max-width: 750px) {
   .box-title {
     text-align: center;
-    font-size: 1rem;
-    font-weight: bold;
+    font-size: 2rem;
+    font-weight: bolder;
     margin: 0 auto;
     padding: 1.5rem 5px 0.8rem 5px;
   }
